# jed

./: COPYRIGHT  INSTALL  INSTALL.be  INSTALL.pc  INSTALL.unx  INSTALL.vms  INSTALL.w32  README  changes.txt  configure  jed.lis
autoconf/: Makefile.in  aclocal.m4  configure.ac
autoconf/include/: pkgcfg.m4
desktop/: jed.desktop  xjed.desktop
doc/: README
doc/hlp/: jedfuns.hlp  libfuns.hlp
doc/manual/: jed.1  jed.tex  rgrep.1
doc/tm/: Makefile  README  jedfuns.tm
doc/tm/rtl/: abbrev.tm  blocal.tm  buffer.tm  color.tm  eval.tm  file.tm  hidden.tm  hooks.tm  info.tm  insdel.tm  keys.tm  mark.tm  menu.tm  message.tm  mini.tm  misc.tm  mouse.tm  move.tm  process.tm  rect.tm  region.tm  search.tm  syntax.tm  terminal.tm  tm-sort.sl  userinfo.tm  whatelse.sl  window.tm  xjed.tm
doc/txt/: abbrev.txt  color.txt  compile.txt  dfa.txt  edt.txt  emacs.txt  filelock.txt  fold.txt  hooks.txt  ide-mode.txt  jed_faq.txt  linux-keys.txt  menus.txt  mouse.txt  pc-keys.txt  program.txt  recentx.txt  rgrep.txt  rmail.txt  script.txt  sessions.txt  syntax.txt  undo.txt  utf8.txt  viswrap.txt  wjed.txt  wordstar.txt  xjed.txt  xrenderfont.txt  yankpop.txt
info/: dir.info  info.info  jed.1in  jed.2in  jed.3in  jed.info
lib/: README  abbrev.sl  abbrmisc.sl  aboutjed.hlp  acompile.sl  aprocess.sl  ashell.sl  backups.sl  bibtex.sl  binary.sl  bookmark.sl  brief.sl  buf.sl  bufed.sl  bytecomp.sl  cal.sl  chglog.sl  cmisc.sl  cmode.sl  comments.sl  compat.sl  compile.sl  compress.sl  cpright.hlp  ctags.sl  cua.hlp  cua.sl  cuamisc.sl  dabbrev.sl  dcl.sl  digraph.sl  dired.sl  docbook.sl  dos437.sl  dos850.sl  dos852.sl  edt.hlp  edt.sl  emacs.hlp  emacs.sl  (+123 more)
lib/colors/: README  black1.sl  black2.sl  black3.sl  black4.sl  blue1.sl  blue2.sl  blue3.sl  default1.sl  update-colors  white1.sl
lib/colors/Xjed/: black4.sl  elegant.sl  modern.sl  night.sl  pastel0.sl
mkfiles/: install.sl  m32init.bat  makefile.m32  setpath.bat
src/: DESCRIP.MMS  Makefile.in  TODO  VMSMAKE.COM  abbrev.c  abbrev.h  blocal.c  blocal.h  buffer.c  buffer.h  chkslang.c  cmds.c  cmds.h  colors.c  colors.h  config.hin  copyright  dfasyntx.c  dfasyntx.h  display.c  display.h  dos_os2.c  doskeys.h  file.c  file.h  getmail.c  gpmmouse.c  gtkjed.h  gtkmenu.c  gtkterm.c  gtkwin.c  hooks.c  hooks.h  i386.c  ibmpc.c  indent.c  indent.h  ins.c  ins.h  intrin.c  (+73 more)
src/mkfiles/: README  makefile.all  mkmake.c
src/test/: runtests.sh  test_cmode.sl  test_expand.sl  test_links.sl  test_narrow.sl  test_region.sl  test_replace.sl  test_search.sl
